plugins/InspectionGadgets/test/com/siyeh/igtest/junit/parameterized/Wrongsignature.java
@org.<error descr="Cannot resolve symbol 'junit'">junit</error>.runner.RunWith(org.<error descr="Cannot resolve symbol 'junit'">junit</error>.runners.Parameterized.class)
public class ParametricRegularExpressionTest {
   @org.<error descr="Cannot resolve symbol 'junit'">junit</error>.runners.Parameterized.Parameters
    java.util.Collection <warning descr="Method 'regExValues()' should be public static">regExValues</warning>() {
        return null;
    }
}